fix(css): padding e grid-gap in comments

--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,13 @@ input[type=submit] {
   border-radius: var(--border-radius);
   padding: 1rem;
 }
+@media screen and (min-width: 800px) {
+  .basic-container, textarea {
+    /* mixin mq */
+    padding: 1.5rem;
+    /* end mixin mq */
+  }
+}
 
 .comments-container {
   padding: 1rem;
@@ -214,6 +221,7 @@ textarea {
     grid-template-columns: 2.5em auto auto;
     grid-template-rows: auto;
     grid-template-areas: "points header action" "points comment comment";
+    grid-gap: 1.5rem;
     /* end mixin mq */
   }
 }
