--- a/scss/components/_comments.scss
+++ b/scss/components/_comments.scss
@@ -18,6 +18,7 @@
     grid-template-areas:
       "points header action"
       "points comment comment";
+    grid-gap: 1.5rem;
   }
 }
 
